--- a/test.html
+++ b/test.html
@@ -51,7 +51,7 @@
 		<div class="a-card__paddings">
 			<div class="form-area">
 				<!-- ######################################################################### -->
-				<h1>Delivery Date Settings V6.4</h1>
+				<h1>Delivery Date Settings V6.6</h1>
 				<!-- ######################################################################### -->
 				<h3>Change Delivery Date</h3>
 				<div class="form-area__content">
@@ -317,16 +317,22 @@
 								krslog("Processing " + orders_arr[h].items[i].id);
  								var date = new Date();
 								date.setTime(0);
+								var got_date = false;
 								if (typeof orders_arr[h].items[i].extraFields !== 'undefined'){
 									if (typeof orders_arr[h].items[i].extraFields.ecwid_order_delivery_time_interval_end !== 'undefined'){
 										date = new Date( orders_arr[h].items[i].extraFields.ecwid_order_delivery_time_interval_end);
+										got_date = true;
 									}
 								}
-								else if (typeof orders_arr[h].items[i].pickupTime !== 'undefined'){
-									krslog(orders_arr[h].items[i].pickupTime);
-									date = new Date(orders_arr[h].items[i].pickupTime);
+								if (!got_date){
+									if (typeof orders_arr[h].items[i].pickupTime !== 'undefined'){
+										krslog(orders_arr[h].items[i].pickupTime);
+										date = new Date(orders_arr[h].items[i].pickupTime);
+										got_date = true;
+									}
 								}
-								else {
+								if(!got_date){
+
 									krslog("Order that is not delivery or self pickup, see console");	
 									console.log(orders_arr[h].items[i]);
 									$("#no-date-p").text($("#no-date-p").text() + ', ' + orders_arr[h].items[i].id);
