--- a/test.html
+++ b/test.html
@@ -51,7 +51,7 @@
 		<div class="a-card__paddings">
 			<div class="form-area">
 				<!-- ######################################################################### -->
-				<h1>Delivery Date Settings V6.6</h1>
+				<h1>Delivery Date Settings V6.8</h1>
 				<!-- ######################################################################### -->
 				<h3>Change Delivery Date</h3>
 				<div class="form-area__content">
@@ -139,9 +139,9 @@
 					</table>
 					<!--a-card with tiny paddings-->
 					<div class="a-card a-card--tiny">
-						<div class="a-card__paddings">
+						<div id="no-date-p" class="a-card__paddings">
 							<h5>Orders with no dates:</h5>
-							<p id="no-date-p"></p>
+
 						</div>
 					</div>
 				</div>
@@ -332,11 +332,9 @@
 									}
 								}
 								if(!got_date){
-
 									krslog("Order that is not delivery or self pickup, see console");	
 									console.log(orders_arr[h].items[i]);
-									$("#no-date-p").text($("#no-date-p").text() + ', ' + orders_arr[h].items[i].id);
-									
+									$("#no-date-p").append($("<p>" + orders_arr[h].items[i].id + "</p>");
 								}
 								date = new Date(date.getFullYear(), date.getMonth(), date.getDate(), 00, 0, 0, 0);
 								var epoch = date.getTime();
